reduce amount of transfered content by adding 304 response make update frequency configurable add modified date-time to folder
